--- a/TheGame/TheGame.vcxproj
+++ b/TheGame/TheGame.vcxproj
@@ -152,18 +152,23 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Alien.cpp" />
+    <ClCompile Include="BackGroundObj.cpp" />
     <ClCompile Include="Bus.cpp" />
     <ClCompile Include="ColliderObject.cpp" />
     <ClCompile Include="EventHandler.cpp" />
+    <ClCompile Include="Fueler.cpp" />
     <ClCompile Include="IMovable.cpp" />
     <ClCompile Include="IPaintable.cpp" />
+    <ClCompile Include="LongDistanceBus.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Drawer.cpp" />
+    <ClCompile Include="Obstacle.cpp" />
     <ClCompile Include="Point.cpp" />
     <ClCompile Include="Rectangle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Alien.h" />
+    <ClInclude Include="BackGroundObj.h" />
     <ClInclude Include="Bus.h" />
     <ClInclude Include="EventHandler.h" />
     <ClInclude Include="ColliderObject.h" />
@@ -173,8 +178,11 @@
     <ClInclude Include="IFilling.h" />
     <ClInclude Include="IMovable.h" />
     <ClInclude Include="DrawableObj.h" />
+    <ClInclude Include="LongDistanceBus.h" />
     <ClInclude Include="ObserverPattern.h" />
     <ClInclude Include="Drawer.h" />
+    <ClInclude Include="Obstacle.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Rectangle.h" />
   </ItemGroup>
